fixed bug in displaying card's hand